feat: agrega modulo de observabilidad con Prometheus, Loki, Promtail y Grafana, documentacion y refactorizaciones de frontend y backend